# GutIQ

./: .gitignore  CHANGELOG.md  PRD-hackathon.md  PRD.md  gut_iq_report.html  package-lock.json  report.html  ui-design-prompt.md
backend/: .env.example  .gitignore  BACKEND.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/api/v1/: __init__.py  auth.py
backend/app/: main.py
backend/app/.github/workflows/: test.yml
backend/app/ai_llm/: gut_check_gen.py  gut_check_profile.py  gut_check_prompt.py  gut_check_tools.py  pain_relief_gen.py  parser.py  pattern_engine.py  red_flag_check.py  transcriber.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  export.py  gut_check.py  log.py  onboarding.py  pain_relief.py  user.py
backend/app/core/: config.py  security.py  utils.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  confirmed_trigger.py  export_share.py  gut_check.py  log.py  pain_relief.py  user.py
backend/app/rag/: ingest.py  retriever.py
backend/app/schemas/: __init__.py  log.py  onboarding.py  pain_relief.py  user.py
backend/core/: config.py  security.py
backend/db/: __init__.py
backend/knowledge/cache/: raw_docs.parquet
backend/knowledge/txts/: dyspepsia.txt  peppermintprocedure.txt
backend/models/: user.py
backend/schemas/: user.py
backend/tests/: conftest.py  test_auth.py  test_onboarding.py  test_pattern_engine.py  test_red_flag_check.py  test_retriever.py  test_simple.py
docs/: README.md  api-reference.md  architecture.md  changelog.md  setup.md  (+5 more)
(+76 files in other folders)
